changement chemin img et h2 projet sur index

--- a/gfa.html
+++ b/gfa.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="data/imgs/MTI.png" type="image/x-icon">
+    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-GFA.css">
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -21,8 +21,8 @@
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
             <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
         </nav>
         
         <div class="header">
@@ -79,7 +79,7 @@
             regardant de plus près, c’est un logo plus en longueur et se lisant de gauche à droite qui paraissait le
             plus cohérent. Après avoir validé avec les équipes, j’ai décidé de réfléchir plus en profondeur à ce logo.
         </div>
-        <img class="img_feuille" src="data/imgs/img-manon-feuille.png" alt="">
+        <img class="img_feuille" src="data/imgs/gfa/img-manon-feuille.png" alt="">
 
         <div class="box-h2projet">
             <div class="box-le">
