--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
     <meta http-equiv="refresh" content="3600">
 
-    <link rel="shortcut icon" href="data/imgs/MTI.png" type="image/x-icon">
+    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-index.css">
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -18,7 +18,7 @@
     <script src="data/js/script-index.js"></script>
 
     <button id="return_button" class="return_button" onclick="window.location.href='#start';">
-        <img src="data/imgs/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
+        <img src="data/imgs/index/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
     </button>
 </head>
 
@@ -30,14 +30,14 @@
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
             <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
         </nav>
 
         <div class="container-header">
             <div class="header">
                 <div class="header-column-left">
-                    <img src="data/imgs/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+                    <img src="data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
                 </div>
                 <div class="header-column-right">
                     <h2 class="hello">Hello,</h2>
@@ -55,6 +55,15 @@
         </div>
     </div>
     <div class="f-project">
+        <div class="box-h2projet">
+            <div class="box-mes">
+                <p class="txt-mes">mes</p>
+            </div>
+            <h2 class="projets" id="projets">
+                projets
+            </h2>
+        </div>
+        
         <div class="container-projects-cards">
             <div class="box-card-1">
                 <div class="project_card1"></div>
@@ -93,8 +102,8 @@
             <script>document.write(new Date().getFullYear())</script>
         </p>
         <br>
-        <a href=""><img src="data/imgs/logo-behance-noir.png" class="img-footer"></a>
-        <a href=""><img src="data/imgs/logo-linkedin-noir.png" class="img-footer"></a>
+        <a href=""><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
+        <a href=""><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
     </footer>
 </body>
 
