--- a/leria.html
+++ b/leria.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="data/imgs/MTI.png" type="image/x-icon">
+    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-Leria.css">
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -21,8 +21,8 @@
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
             <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
         </nav>
 
         <div class="header">
@@ -84,7 +84,7 @@
                 lanc&#233; et j'ai pu
                 le d&#233;couvrir avec elle et d&#233;couvrir en m&#234;me temps les codes que j'allais derri&#232;re
                 appliquer au site.</p>
-            <img class="logo_leria" src="data/imgs/Leria.png" alt="">
+            <img class="logo_leria" src="data/imgs/leria/Leria.png" alt="">
 
         </div>
 
@@ -104,7 +104,7 @@
                 d&#8217;&#234;tre un site vitrine et qui sera le support du lancement de LERIA. En effet, les filles de
                 l&#8217;&#233;quipe ont d&#233;j&#224; leur propre r&#233;putation/client sur le march&#233; des risques
                 l&#233;gaux. </p>
-            <img class="logo_wireframes" src="data/imgs/Wireframes.png" alt="">
+            <img class="logo_wireframes" src="data/imgs/leria/Wireframes.png" alt="">
 
         </div>
 
@@ -141,15 +141,15 @@
             </div>
 
             <div class="wireframes">
-                <img class="logo_wireframes" src="data/imgs/Wordpress  – LERIA-1 1.png" alt="">
+                <img class="logo_wireframes" src="data/imgs/leria/Wordpress  – LERIA-1 1.png" alt="">
             </div>
 
             <div class="img_renouvelable_immobilier">
                 <div class="image_container">
-                    <img class="logo_renouvelable" src="data/imgs/Énergies renouvelables – LERIA-1 1.png" alt="">
+                    <img class="logo_renouvelable" src="data/imgs/leria/Énergies renouvelables – LERIA-1 1.png" alt="">
                 </div>
                 <div class="image_container">
-                    <img class="logo_imobilier" src="data/imgs/Immobilier – LERIA-1 1.png" alt="">
+                    <img class="logo_imobilier" src="data/imgs/leria/Immobilier – LERIA-1 1.png" alt="">
                 </div>
             </div>
     </div>
@@ -172,8 +172,8 @@
             <div class="footer">
                 <button class="btn_footer_manon">T&#233;l&#233;charger mon CV</button>
                 <p class="text_footer_manon">@mthillayisnard 2023</p>
-                <img class="logo_footer_manon" src="data/imgs/logo-behance-noir.png" alt="">
-                <img class="logo_footer_manon" src="data/imgs/logo-linkedin-noir.png" alt="">
+                <img class="logo_footer_manon" src="data/imgs/all/logo-behance-noir.png" alt="">
+                <img class="logo_footer_manon" src="data/imgs/all/logo-linkedin-noir.png" alt="">
             </div>
 </body>
 
