--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="data/imgs/MTI.png" type="image/x-icon">
+        <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
         <link rel="stylesheet" href="data/css/style-qui_suis-je.css">
         <link rel="stylesheet" href="data/css/nav.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -20,14 +20,14 @@
                 <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
                 <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
                 <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-                <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
+                <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
+                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
             </nav>
 
             <div class="container-header">
                 <div class="header">
                     <div class="header-column-left">
-                        <img src="data/imgs/manon-enfant.png" alt="Image de Manon Thillay-Isnard enfant" class="manon-enfant">
+                        <img src="data/imgs/qui-suis-je/manon-enfant.png" alt="Image de Manon Thillay-Isnard enfant" class="manon-enfant">
                     </div>
                     <div class="header-column-right">
                         <h2 class="hello">Hello,</h2>
@@ -51,8 +51,8 @@
             <footer>
                 <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
                 <br>
-                <a href=""><img src="data/imgs/logo-behance-noir.png" class="img-footer"></a>
-                <a href=""><img src="data/imgs/logo-linkedin-noir.png" class="img-footer"></a>
+                <a href=""><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
+                <a href=""><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
             </footer>
         </div>
     </body>
