project card : imgs, h3, p

--- a/index.html
+++ b/index.html
@@ -63,37 +63,43 @@
                 projets
             </h2>
         </div>
-        
+
         <div class="container-projects-cards">
-            <div class="box-card-1">
-                <div class="project_card1"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/leria.jpeg" alt="Image d'illustration du projet Leria." class="project-img">
+                <h3 class="project-title">Leria</h3>
+                <p class="project-subtitle">Création Web</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
-            <div class="box-card-2">
-                <div class="project_card2"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/sylvassur.jpeg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                <h3 class="project-title">Sylvassur</h3>
+                <p class="project-subtitle">Création Web & vidéos tutos</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
-            <div class="box-card-3">
-                <div class="project_card3"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/autopanneassur.jpeg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                <h3 class="project-title">AutoPanneAssur</h3>
+                <p class="project-subtitle">Création Web</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
-            <div class="box-card-4">
-                <div class="project_card4"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/l'acoste.jpeg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
+                <h3 class="project-title">L’ACOSTE</h3>
+                <p class="project-subtitle">Refonte de l’identité & création d’app</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
-            <div class="box-card-5">
-                <div class="project_card5"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/gfa.jpeg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                <h3 class="project-title">GFA Funding</h3>
+                <p class="project-subtitle">Création d’identité</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
-            <div class="box-card-6">
-                <div class="project_card6"></div>
-                <h3 class="project-title"></h3>
-                <p class="project-subtitle"></p>
+            <div class="box-card">
+                <img src="data/imgs/index/bouygues-telecom.jpeg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                <h3 class="project-title">Bouygues Telecom</h3>
+                <p class="project-subtitle">Proposition de solution</p>
+                <div class="container-btn-projects-cards"></div>
             </div>
         </div>
     </div>
