fin des card et cursor pointer sur les btn de index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
+    <meta name="description"
+        content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
     <meta http-equiv="refresh" content="3600">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
@@ -29,15 +30,19 @@
             <a href="index.html#projets"><button class="nav-btn-txt">Mes projets</button></a>
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon
+                    CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img
+                        src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img
+                        src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
         </nav>
 
         <div class="container-header">
             <div class="header">
                 <div class="header-column-left">
-                    <img src="data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+                    <img src="data/imgs/index/img-manon-acc.png" alt="Image de Manon Thillay-Isnard"
+                        class="img-manon-acc">
                 </div>
                 <div class="header-column-right">
                     <h2 class="hello">Hello,</h2>
@@ -69,37 +74,108 @@
                 <img src="data/imgs/index/leria.jpeg" alt="Image d'illustration du projet Leria." class="project-img">
                 <h3 class="project-title">Leria</h3>
                 <p class="project-subtitle">Création Web</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/sylvassur.jpeg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                <img src="data/imgs/index/sylvassur.jpeg" alt="Image d'illustration du projet Sylvassur."
+                    class="project-img">
                 <h3 class="project-title">Sylvassur</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            &Agrave; venir
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/autopanneassur.jpeg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                <img src="data/imgs/index/autopanneassur.jpeg" alt="Image d'illustration du projet AutoPanneAssur."
+                    class="project-img">
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            &Agrave; venir
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/l'acoste.jpeg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
+                <img src="data/imgs/index/l'acoste.jpeg" alt="Image d'illustration du projet L’ACOSTE."
+                    class="project-img">
                 <h3 class="project-title">L’ACOSTE</h3>
                 <p class="project-subtitle">Refonte de l’identité & création d’app</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            &Agrave; venir
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/gfa.jpeg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                <img src="data/imgs/index/gfa.jpeg" alt="Image d'illustration du projet GFA Funding."
+                    class="project-img">
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            &Agrave; venir
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/bouygues-telecom.jpeg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                <img src="data/imgs/index/bouygues-telecom.jpeg" alt="Image d'illustration du projet Bouygues Telecom."
+                    class="project-img">
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
-                <div class="container-btn-projects-cards"></div>
+                <div class="container-btn-projects-cards">
+                    <a href="">
+                        <button class="projects-buttons-left">
+                            &Agrave; venir
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
