qualité d'image et header index baissé

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="container-projects-cards">
             <div class="box-card">
-                <img src="data/imgs/index/leria.jpeg" alt="Image d'illustration du projet Leria." class="project-img">
+                <img src="data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
                 <h3 class="project-title">Leria</h3>
                 <p class="project-subtitle">Création Web</p>
                 <div class="container-btn-projects-cards">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/sylvassur.jpeg" alt="Image d'illustration du projet Sylvassur."
+                <img src="data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur."
                     class="project-img">
                 <h3 class="project-title">Sylvassur</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/autopanneassur.jpeg" alt="Image d'illustration du projet AutoPanneAssur."
+                <img src="data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur."
                     class="project-img">
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/l'acoste.jpeg" alt="Image d'illustration du projet L’ACOSTE."
+                <img src="data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE."
                     class="project-img">
                 <h3 class="project-title">L’ACOSTE</h3>
                 <p class="project-subtitle">Refonte de l’identité & création d’app</p>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/gfa.jpeg" alt="Image d'illustration du projet GFA Funding."
+                <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding."
                     class="project-img">
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="box-card">
-                <img src="data/imgs/index/bouygues-telecom.jpeg" alt="Image d'illustration du projet Bouygues Telecom."
+                <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom."
                     class="project-img">
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
