liens btn projects

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 <h3 class="project-title">Leria</h3>
                 <p class="project-subtitle">Création Web</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="leria.html">
                         <button class="projects-buttons-left">
                             D&eacute;couvrir le projet
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="http://leria-insurance.com/" target="_blank">
                         <button class="projects-buttons-right">
                             Site Web
                         </button>
@@ -93,12 +93,12 @@
                 <h3 class="project-title">Sylvassur</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="sylvassur.html">
                         <button class="projects-buttons-left">
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="http://www.sylvassur.com/" target="_blank">
                         <button class="projects-buttons-right">
                             Site Web
                         </button>
@@ -111,12 +111,12 @@
                 <h3 class="project-title">AutoPanneAssur</h3>
                 <p class="project-subtitle">Création Web</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="autopanneassur.html">
                         <button class="projects-buttons-left">
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://autopanneassur.fr/" target="_blank">
                         <button class="projects-buttons-right">
                             Site Web
                         </button>
@@ -129,12 +129,12 @@
                 <h3 class="project-title">L’ACOSTE</h3>
                 <p class="project-subtitle">Refonte de l’identité & création d’app</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="l'acoste.html">
                         <button class="projects-buttons-left">
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -147,12 +147,12 @@
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="gfa.html">
                         <button class="projects-buttons-left">
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -165,12 +165,12 @@
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
                 <div class="container-btn-projects-cards">
-                    <a href="">
+                    <a href="bouygues-telecom.html">
                         <button class="projects-buttons-left">
                             &Agrave; venir
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
