correction soulignement le sur leria

--- a/leria.html
+++ b/leria.html
@@ -56,10 +56,10 @@
     </div>
     <div class="black">
         <div class="box-h2projet">
-            <div class="box-le">
-                <p class="txt-le">le</p>
+            <div class="box-le2">
+                <p class="txt-le2">le</p>
             </div>
-            <h2 class="titre_rose">
+            <h2 class="titre_rose2">
                 projet
             </h2>
         </div>
