--- a/leria.html
+++ b/leria.html
@@ -111,16 +111,13 @@
         <div class="black">
             <div class="box-h2projet">
                 <div class="box-le">
-                    <p class="txt-le">le</p>
+                    <p class="txt-le">la</p>
                 </div>
                 <h2 class="titre_rose">
-                    site
+                    galerie
                 </h2>
             </div>
-            <div class="site_noir">Pour ce projet, j&#8217;ai du mettre les mains dans le cambouis et r&#233;aliser
-                le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
-                compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
-                contenus valid&#233; j&#8217;ai pu me mettre &#224; chercher le template id&#233;al.
+            <div class="site_noir">
             </div>
         </div>
 
