--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -19,7 +19,7 @@
                 <a href="index.html#projets"><button class="nav-btn-txt">Mes projets</button></a>
                 <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
                 <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
-                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
+                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">CV</button></a>
                 <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
                 <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
             </nav>
