--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <script>document.write(new Date().getFullYear())</script>
         </p>
         <br>
-        <a href=""><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
-        <a href=""><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
     </footer>
 </body>
 </html>
