--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <body>
     <div class="fjaune" id="start">
         <nav>
-            <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" alt="logo behance"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" alt="logo linkedin"></button></a>
+            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
+            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
         </nav>
 
         <div class="container-header">
