--- a/m/index.html
+++ b/m/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
     <meta http-equiv="refresh" content="3600">
 
-    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-index.css">
-    <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="../data/css/style-index.css">
+    <link rel="stylesheet" href="../data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -182,12 +182,12 @@
         </div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <br>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
     </footer>
 </body>
 </html>
