liaison mobile fixe

--- a/gfa.html
+++ b/gfa.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+
+    <script src="data/js/device-redirect-computer.js"></script>
 </head>
 
 <body>
