--- a/m/gfa.html
+++ b/m/gfa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="frfr">
 <head>
-    <title>GFA Funding</title>
+    <title>mGFA Funding</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+
+    <script src="../data/js/device-redirect-mobile.js"></script>
 </head>
 
 <body>
