--- a/m/index.html
+++ b/m/index.html
@@ -2,7 +2,7 @@
 <html lang="frfr">
 
 <head>
-    <title>Accueil | mthillayisnard.fr</title>
+    <title>mAccueil | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
     <script src="data/js/script-index.js"></script>
+    <script src="../data/js/device-redirect-mobile.js"></script>
 
     <button id="return_button" class="return_button" onclick="window.location.href='#start';">
         <img src="data/imgs/index/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
