--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
     <script src="data/js/script-index.js"></script>
+    <script src="data/js/device-redirect-computer.js"></script>
 
     <button id="return_button" class="return_button" onclick="window.location.href='#start';">
         <img src="data/imgs/index/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
