--- a/leria.html
+++ b/leria.html
@@ -2,7 +2,7 @@
 <html lang="frfr">
 
 <head>
-    <title>Leria</title>
+    <title>Leria | mthillayisnard.fr</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="data/css/style-Leria.css">
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+
+    <script src="data/js/device-redirect-computer.js"></script>
 </head>
 
 <body>
